# Iris-Codec

javascript/: CMakeLists.txt  README.md  build.sh  configure_emscripten.sh
javascript/examples/js/: iris_codec.js  iris_codec.wasm  slide-viewer.html  tile-viewer.html
javascript/src/: EmscriptenCompat.hpp  IrisCodecContext.cpp  IrisCodecEmscripten.cpp  IrisCodecFile.cpp  IrisCoreVulkan.hpp
